<resources>
    <string name="app_name">ParaPo</string>
    <string name="title_trips">Trips</string>
    <string name="title_track">Track</string>
    <string name="title_traveler">Traveler</string>
    <string name="fullname">LastName, FirstName</string>
    <string name="birthday">mm/dd/yyyy</string>
    <string name="email_address">email@address.com</string>
    <string name="traveler_logo">Traveler Logo</string>
    <string name="birthday_logo">Birthday Logo</string>
    <string name="email_logo">Email Logo</string>
    <string name="gender_logo">Gender Logo</string>
    <string name="gender">Gender</string>
    <string name="logout">LogOut</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="hide_pass">hide</string>
    <string name="show_pass">show</string>

    <string name="signin_label">SIGN IN</string>
    <string name="signup_label">SIGN UP</string>
    <string name="fullname_label">Full Name</string>
    <string name="birthdate_label">Birthday</string>
    <string name="email_label">Email</string>
    <string name="pass_label">Password</string>
    <string name="confirmpass_label">Confirm Password</string>
    <string name="have_acc_label">Already have an account?</string>

    <!--For Design-->
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="text_18">14sp</string>
    <string name="text_16">16sp</string>

    <string name="hail">HAIL</string>
    <string name="hailing">HAILING</string>
    <string name="self_locate">My Location</string>

    <string name="plate_number_label">Plate No.:</string>
    <string name="route_label">Route:</string>
    <string name="seat_count_label">Seat:</string>
    <string name="location_label">Location:</string>
    <string name="plate_number">ABC 123</string>
    <string name="route">Place</string>
    <string name="seat_count">0</string>
    <string name="no_transportation_available">No Transportation Available!</string>
</resources>